# endless-loader

./: .gitignore  Dockerfile  LICENSE  README.md  compose.config.toml  compose.helper.toml  compose.pi.yaml  compose.yaml  config.example.toml  pyproject.toml
.github/workflows/: ci.yml
docs/: design.md  setup.md  troubleshooting.md
samples/fxpatchsdk-companion/metadata/: endless_loader_companion.json
scripts/: capture_screenshots.py
src/endless_loader/: __init__.py  config.py  main.py  models.py  usb_helper.py
src/endless_loader/services/: __init__.py  companion.py  deploy.py  inputs.py  lcd.py  scanner.py  state.py  usb.py
src/endless_loader/static/: app.js  styles.css
src/endless_loader/templates/: base.html  index.html
tests/: test_app.py  test_companion.py  test_config.py  test_deploy.py  test_lcd.py  test_scanner.py  test_usb.py
