[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "endless-loader"
version = "0.1.0"
description = "Phone-first web loader for Polyend Endless patches on Raspberry Pi or Pop!_OS."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "Erich Donahue" }
]
dependencies = [
  "fastapi>=0.136,<1.0",
  "httpx>=0.28,<1.0",
  "uvicorn>=0.44,<1.0",
  "jinja2>=3.1,<4.0",
  "python-multipart>=0.0.20,<1.0",
  "smbus2>=0.6.1,<1.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1.0",
  "pytest>=9,<10",
]

[project.scripts]
endless-loader = "endless_loader.main:cli_main"
endless-loader-usb-helper = "endless_loader.usb_helper:cli_main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
endless_loader = ["templates/*.html", "static/*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
